--- a/bensassonlab.bib
+++ b/bensassonlab.bib
@@ -6081,6 +6081,22 @@ This chapter studies the genus Schizoblastosporion. It provides a systematic dis
 	annote = {X}
 }
 
+@article{leducq_speciation_2015,
+	title = {Speciation driven by hybridization and chromosomal plasticity in a wild yeast},
+	copyright = {{\textcopyright} 2015, Published by Cold Spring Harbor Laboratory Press. The copyright holder for this pre-print is the author. All rights reserved. The material may not be redistributed, re-used or adapted without the author's permission.},
+	url = {http://biorxiv.org/content/early/2015/09/22/027383},
+	doi = {10.1101/027383},
+	abstract = {Hybridization is recognized as a powerful mechanism of speciation and a driving force in generating biodiversity. However, only few multicellular species, limited to a handful of plants and animals, have been shown to fulfill all the criteria of homoploid hybrid speciation. This lack of evidence could lead to the misconception that speciation by hybridization has a limited role in eukaryotes, particularly in single-celled organisms. Laboratory experiments have revealed that fungi such as budding yeasts can rapidly develop reproductive isolation and novel phenotypes through hybridization, showing that in principle homoploid speciation could occur in nature. Here we report a case of homoploid hybrid speciation in natural populations of the budding yeast Saccharomyces paradoxus inhabiting the North American forests. We show that the rapid evolution of chromosome architecture and an ecological context that led to secondary contact between nascent species drove the formation of an incipient hybrid species with a potentially unique ecological niche.},
+	language = {en},
+	urldate = {2015-09-23},
+	journal = {bioRxiv},
+	author = {Leducq, Jean-Baptiste and Nielly-Thibault, Lou and Charron, Guillaume and Eberlein, Chris and Verta, Jukka-Pekka and Samani, Pedram and Sylvester, Kayla and Hittinger, Chris Todd and Bell, Graham and Landry, Christian R.},
+	month = sep,
+	year = {2015},
+	pages = {027383},
+	file = {Full Text PDF:/Users/douda/Library/Application Support/Firefox/Profiles/8vvwl2pu.default/zotero/storage/634Q95ZG/Leducq et al. - 2015 - Speciation driven by hybridization and chromosomal.pdf:application/pdf;Snapshot:/Users/douda/Library/Application Support/Firefox/Profiles/8vvwl2pu.default/zotero/storage/HAJDZNEE/027383.html:text/html}
+}
+
 @misc{_nih_2002,
 	title = {{NIH} guidelines for research involving recombinant {DNA} molecules},
 	url = {http://www4.od.nih.gov/oba/rac/guidelines/guidelines.html},
